--- a/Kipling3/Cube8.html
+++ b/Kipling3/Cube8.html
@@ -551,9 +551,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i5.i236.image.css:image/base/css*/
 #i236 { opacity: 1; }
-/*#/#*//*#i5.i95.shape.css:shape/base/css*/
-#i95 { background-color: #dedede; opacity: 0.00;
-}
 /*#/#*//*#i175.i176.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i95 { cursor: pointer; }
 /*#/#*//*#i95.i96.positioning.css:positioning/base/css.1*/
@@ -694,10 +691,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 
 /*#/#*//*#i236.i237.positioning.css:positioning/base/css.2*/
 #i236 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 180px; height: 50px;
-        -ms-transform: translate(0, 0) translate(60px, 60px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(60px, 60px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(60px, 60px) rotate(0deg);
-        transform: translate(0, 0) translate(60px, 60px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(60px, 80px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(60px, 80px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(60px, 80px) rotate(0deg);
+        transform: translate(0, 0) translate(60px, 80px) rotate(0deg);
+}
+/*#/#*//*#i5.i95.shape.css:shape/base/css*/
+#i95 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -754,7 +754,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/GIYAa94.jpg"/>
+<img id="i130" src="https://i.imgur.com/KuLzkvp.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -764,7 +764,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/qfW81f8.jpg"/>
+<img id="i58" src="https://i.imgur.com/Es7rPWC.jpg"/>
 <!--#/#--><!--#i5.i236.image.html:image/html-->
 <img id="i236" src="https://i.imgur.com/TgCtoo7.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -776,7 +776,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i234.image.html:image/html-->
-<img id="i234" src="https://i.imgur.com/tVAHIk7.jpg"/>
+<img id="i234" src="https://i.imgur.com/el5Z2xq.jpg"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -824,7 +824,7 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/DcZmhFEPyxEYNuaH7'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/qDjFnEft9shUWWBY8'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
@@ -842,7 +842,7 @@ bmShow('i236');
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/DcZmhFEPyxEYNuaH7'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/qDjFnEft9shUWWBY8'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
@@ -856,7 +856,7 @@ document.getElementById('i95').addEventListener('click', function(e){
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/DcZmhFEPyxEYNuaH7'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/qDjFnEft9shUWWBY8'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
