--- a/Kipling3/Cubo9.html
+++ b/Kipling3/Cubo9.html
@@ -754,7 +754,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/KuLzkvp.jpg"/>
+<img id="i130" src="https://i.imgur.com/rqwKGuI.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
