--- a/AUDI A1/story-resize.html
+++ b/AUDI A1/story-resize.html
@@ -404,16 +404,16 @@
 
 
 
-                            <div style="text-align:right; background-color:white; background-size:25px; height:25px;margin-left: 3px; margin-top: 30px; margin-bottom: 30px;">
+                            <div style="text-align:right; background-color:white; background-size:25px; height:5px;margin-left: 3px; margin-top: 30px; margin-bottom: 30px;">
                                 <span>
 
-                                    <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.audi.com.mx/mx/web/es.html" target="block"><img alt="Facebook" class="facebooki" src="https://i.imgur.com/Op9g79c.png" title="Facebook" />
+                                    <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.audi.com.mx/mx/web/es.html" target="block"><img alt="Facebook" class="facebooki" src="https://i.imgur.com/Op9g79c.png" title="Facebook" style="height: 25px; " />
                                     </a>
 
 
-                                    <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado http://www.audi.com.mx/mx/web/es.html" target="_blank"> <img alt="compartir en Whatssap" class="whatsappi" height="25" src="https://i.imgur.com/ln9omrS.png" title="compartir en Whatsapp" width="21"></a>
+                                    <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado http://www.audi.com.mx/mx/web/es.html" target="_blank"> <img alt="compartir en Whatssap" class="whatsappi" src="https://i.imgur.com/ln9omrS.png" title="compartir en Whatsapp" style="height: 25px; "  ></a>
 
-                                    <a class="shared" href="https://twitter.com/home?status=http://www.audi.com.mx/mx/web/es.html" target="block"><img alt="Twitter" class="twitteri" src="https://i.imgur.com/R36K7AR.png" title="Twitter" />
+                                    <a class="shared" href="https://twitter.com/home?status=http://www.audi.com.mx/mx/web/es.html" target="block"><img alt="Twitter" class="twitteri" src="https://i.imgur.com/R36K7AR.png" title="Twitter" style="height: 25px; " />
                                     </a>
 
                                     <img class="final" src="https://i.imgur.com/rw7KVcM.png" style="height: 40px; margin-right: -20px; margin-top: -20px; float: right;">
