--- a/Emperador/story-resize.html
+++ b/Emperador/story-resize.html
@@ -26,7 +26,7 @@
             position: relative;
             overflow: hidden;
             color: #000;
-            font-family: Lato, sans-serif;
+            font-family: Trebuchet MS, sans-serif;
 
         }
 
@@ -319,7 +319,7 @@
 
 
                         <div class="bzm_text">
-                            <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#8b8b8b;  margin-top:50px; margin-bottom: -20px; font-size: 15px; line-height: 1.5em; text-align: center; width:100%;">
+                            <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#8b8b8b;  margin-top:50px; margin-bottom: -20px; font-size: 14px; line-height: 1.5em; text-align: center; width:100%;">
                                 <i>
                                     <h2>Eso que quieres: ¡Consíguelo con Emperador!
                                     </h2>
