--- a/Emperador/Cube.html
+++ b/Emperador/Cube.html
@@ -657,11 +657,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i286.image.css:image/base/css*/
 #i286 { opacity: 1; }
 /*#/#*//*#i286.i287.positioning.css:positioning/base/css.2*/
-#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 208px; height: 55px;
-        -ms-transform: translate(0, 0) translate(46px, 135px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(46px, 135px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(46px, 135px) rotate(0deg);
-        transform: translate(0, 0) translate(46px, 135px) rotate(0deg);
+#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 187px; height: 50px;
+        -ms-transform: translate(0, 0) translate(54px, 141px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(54px, 141px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(54px, 141px) rotate(0deg);
+        transform: translate(0, 0) translate(54px, 141px) rotate(0deg);
 }
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
@@ -712,15 +712,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i376.image.css:image/base/css*/
-#i376 { opacity: 1; }
-/*#/#*//*#i376.i377.positioning.css:positioning/base/css.2*/
-#i376 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 208px; height: 55px;
-        -ms-transform: translate(0, 0) translate(46px, 135px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(46px, 135px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(46px, 135px) rotate(0deg);
-        transform: translate(0, 0) translate(46px, 135px) rotate(0deg);
-}
 /*#/#*//*#i5.i380.image.css:image/base/css*/
 #i380 { opacity: 1; }
 /*#/#*//*#i380.i381.positioning.css:positioning/base/css.2*/
@@ -729,6 +720,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(167px, 224px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(167px, 224px) rotate(0deg);
         transform: translate(0, 0) translate(167px, 224px) rotate(0deg);
+}
+/*#/#*//*#i5.i384.image.css:image/base/css*/
+#i384 { opacity: 1; }
+/*#/#*//*#i384.i385.positioning.css:positioning/base/css.2*/
+#i384 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 187px; height: 50px;
+        -ms-transform: translate(0, 0) translate(54px, 141px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(54px, 141px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(54px, 141px) rotate(0deg);
+        transform: translate(0, 0) translate(54px, 141px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -770,15 +770,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i6.i378.image.css:image/base/css*/
-#i378 { opacity: 1; }
-/*#/#*//*#i378.i379.positioning.css:positioning/base/css.2*/
-#i378 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 208px; height: 55px;
-        -ms-transform: translate(0, 0) translate(46px, 135px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(46px, 135px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(46px, 135px) rotate(0deg);
-        transform: translate(0, 0) translate(46px, 135px) rotate(0deg);
-}
 /*#/#*//*#i6.i382.image.css:image/base/css*/
 #i382 { opacity: 1; }
 /*#/#*//*#i382.i383.positioning.css:positioning/base/css.2*/
@@ -787,6 +778,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(167px, 224px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(167px, 224px) rotate(0deg);
         transform: translate(0, 0) translate(167px, 224px) rotate(0deg);
+}
+/*#/#*//*#i6.i386.image.css:image/base/css*/
+#i386 { opacity: 1; }
+/*#/#*//*#i386.i387.positioning.css:positioning/base/css.2*/
+#i386 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 187px; height: 50px;
+        -ms-transform: translate(0, 0) translate(54px, 141px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(54px, 141px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(54px, 141px) rotate(0deg);
+        transform: translate(0, 0) translate(54px, 141px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -835,7 +835,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/MIj2tpT.jpg"/>
 <!--#/#--><!--#i4.i286.image.html:image/html-->
-<img id="i286" src="https://i.imgur.com/LxZkK4Q.png"/>
+<img id="i286" src="https://i.imgur.com/V2uTXDH.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/zwOQRlk.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -850,10 +850,10 @@ url('fonts/') format('svg');
 <div id="i24">Responde la trivia y suma más puntos en el menor tiempo posible.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/FRNbBVu.jpg"/>
-<!--#/#--><!--#i5.i376.image.html:image/html-->
-<img id="i376" src="https://i.imgur.com/LxZkK4Q.png"/>
 <!--#/#--><!--#i5.i380.image.html:image/html-->
 <img id="i380" src="https://i.imgur.com/zwOQRlk.png"/>
+<!--#/#--><!--#i5.i384.image.html:image/html-->
+<img id="i384" src="https://i.imgur.com/V2uTXDH.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -866,10 +866,10 @@ url('fonts/') format('svg');
 <div id="i34">¡Suma puntos para competir en un ranking con otros jugadores!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/1RRJDJs.jpg"/>
-<!--#/#--><!--#i6.i378.image.html:image/html-->
-<img id="i378" src="https://i.imgur.com/LxZkK4Q.png"/>
 <!--#/#--><!--#i6.i382.image.html:image/html-->
 <img id="i382" src="https://i.imgur.com/zwOQRlk.png"/>
+<!--#/#--><!--#i6.i386.image.html:image/html-->
+<img id="i386" src="https://i.imgur.com/V2uTXDH.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -942,6 +942,14 @@ if ('click' === 'click') {
 
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
+/*#/#*//*#i5.i380.image.js:image/base/js*/
+
+/*#/#*//*#i380.i381.positioning.js:positioning/base/js.2*/
+bmShow('i380');
+/*#/#*//*#i5.i384.image.js:image/base/js*/
+
+/*#/#*//*#i384.i385.positioning.js:positioning/base/js.2*/
+bmShow('i384');
 /*#/#*//*#i95.i312.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i95');
@@ -955,14 +963,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i5.i376.image.js:image/base/js*/
-
-/*#/#*//*#i376.i377.positioning.js:positioning/base/js.2*/
-bmShow('i376');
-/*#/#*//*#i5.i380.image.js:image/base/js*/
-
-/*#/#*//*#i380.i381.positioning.js:positioning/base/js.2*/
-bmShow('i380');
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -970,6 +970,14 @@ bmShow('i380');
   
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
+/*#/#*//*#i6.i382.image.js:image/base/js*/
+
+/*#/#*//*#i382.i383.positioning.js:positioning/base/js.2*/
+bmShow('i382');
+/*#/#*//*#i6.i386.image.js:image/base/js*/
+
+/*#/#*//*#i386.i387.positioning.js:positioning/base/js.2*/
+bmShow('i386');
 /*#/#*//*#i99.i336.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
@@ -983,14 +991,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i6.i378.image.js:image/base/js*/
-
-/*#/#*//*#i378.i379.positioning.js:positioning/base/js.2*/
-bmShow('i378');
-/*#/#*//*#i6.i382.image.js:image/base/js*/
-
-/*#/#*//*#i382.i383.positioning.js:positioning/base/js.2*/
-bmShow('i382');
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1065,15 +1065,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i376.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i376.i377.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i380.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i380.i381.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i384.image.meta:image/meta*/
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i384.i385.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
@@ -1094,15 +1094,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i378.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i378.i379.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i382.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i382.i383.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i386.image.meta:image/meta*/
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i386.i387.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
