--- a/Emperador/hover-text_doblelanding.html
+++ b/Emperador/hover-text_doblelanding.html
@@ -111,13 +111,13 @@
 
             <div class="imgBx">
                 
-              <iframe  src="FadeBig2.html" width="298" height="598" frameborder="0" scrolling="no" align="center"></iframe>
+              <iframe  src="Fade_doblelanding.html" width="298" height="598" frameborder="0" scrolling="no" align="center"></iframe>
             </div>
 
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://programacion.disneylatino.com/xd/" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/vaVeawE.jpg"> </a></div>
+                <a href="https://www.facebook.com/pages/category/Food---Beverage-Company/Galletas-Emperador-345815895598869/" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/TvWe6C5.jpg"> </a></div>
 
              
 
