--- a/PERU/Venetian_visit.html
+++ b/PERU/Venetian_visit.html
@@ -2431,7 +2431,7 @@ var el = document.getElementById('i97');
 
 el.addEventListener('click', function(e){
     /*#i107.i108.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.facebook.com/pg/Visit-Peru-524042817717056/posts/?ref=page_internal'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
