--- a/PERU/Fade_300x250.html
+++ b/PERU/Fade_300x250.html
@@ -66,7 +66,7 @@
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/FXePBfh.gif)
+            background-image: url(https://i.imgur.com/xc4GdVe.gif)
 
         }
 
