--- a/PERU/Fade_300x250_visit.html
+++ b/PERU/Fade_300x250_visit.html
@@ -277,7 +277,7 @@
         <div class="cta"> <a href="https://www.facebook.com/pg/Visit-Peru-524042817717056/posts/?ref=page_internal" target="_blank">
     <img src="" style="height: 40px;"></a></div>   
 
-        <a href="https://www.facebook.com/pg/BaileysMexico/posts/?ref=page_internal" target="_blank">
+        <a href="https://www.facebook.com/pg/marcaPERU/posts/?ref=page_internal" target="_blank">
             <div class="carousel-container">
                 <!-- ESTAS SE COLOCAN EN EL CSS -->
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
