--- a/PERU/Venetian_visit.html
+++ b/PERU/Venetian_visit.html
@@ -2301,7 +2301,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/1I9JMSk.png"/>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Descubre paisajes naturales increíbles, haz trekking o surf, conoce la cultura y disfrutar de fascinantes paseos campestres.</div>
+<div id="i68">Descubre paisajes naturales increíbles, haz trekking o surf, conoce la cultura y disfruta de fascinantes paseos campestres.</div>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">¡La aventura te espera en Perú!</div>
 <!--#/#--><!--#i91.image.html:image/html-->
