--- a/PERU/Fade_300x250.html
+++ b/PERU/Fade_300x250.html
@@ -284,7 +284,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title"><b>PERÚ: País polifacético, especialista y cautivado.</b></span>
+            <div class="bzm_text"> <span class="bzm_text_title"><b>PERÚ: País polifacético, especialista y cautivador.</b></span>
                </div>
 
                
