--- a/SCAPPINO/Cube2.html
+++ b/SCAPPINO/Cube2.html
@@ -717,23 +717,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i354.text.css:text/base/css*/
-#i354 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
-/*#/#*//*#i354.i355.positioning.css:positioning/base/css.1*/
-#i354 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 48px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-}
 /*#/#*//*#i5.i496.image.css:image/base/css*/
 #i496 { opacity: 1; }
 /*#/#*//*#i496.i497.positioning.css:positioning/base/css.1*/
 #i496 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
-        -ms-transform: translate(0, 0) translate(0px, 129px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 129px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 129px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 129px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 116px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 116px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 116px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 116px) rotate(0deg);
 }
 /*#/#*//*#i5.i414.image.css:image/base/css*/
 #i414 { opacity: 1; }
@@ -753,6 +744,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(195px, 217px) rotate(0deg);
         transform: translate(0, 0) translate(195px, 217px) rotate(0deg);
 }
+/*#/#*//*#i5.i498.image.css:image/base/css*/
+#i498 { opacity: 1; }
+/*#/#*//*#i498.i499.positioning.css:positioning/base/css.2*/
+#i498 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 48px; height: 48px;
+        -ms-transform: translate(0, 0) translate(84px, 181px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(84px, 181px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(84px, 181px) rotate(0deg);
+        transform: translate(0, 0) translate(84px, 181px) rotate(0deg);
+}
 /*#/#*//*#i5.i488.image.css:image/base/css*/
 #i488 { opacity: 1; }
 /*#/#*//*#i488.i489.positioning.css:positioning/base/css.2*/
@@ -762,24 +762,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(75px, 137px) rotate(0deg);
         transform: translate(0, 0) translate(75px, 137px) rotate(0deg);
 }
-/*#/#*//*#i5.i498.image.css:image/base/css*/
-#i498 { opacity: 1; }
-/*#/#*//*#i498.i499.positioning.css:positioning/base/css.2*/
-#i498 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 48px; height: 48px;
-        -ms-transform: translate(0, 0) translate(89px, 181px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(89px, 181px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(89px, 181px) rotate(0deg);
-        transform: translate(0, 0) translate(89px, 181px) rotate(0deg);
-}
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i95.i96.positioning.css:positioning/base/css.1*/
 #i95 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(-7px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-7px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-7px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(-7px, 0px) rotate(0deg);
 }
 /*#/#*//*#i5.i460.image.css:image/base/css*/
 #i460 { opacity: 1; }
@@ -832,11 +823,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i500.text.css:text/base/css*/
 #i500 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i500.i501.positioning.css:positioning/base/css.1*/
-#i500 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 209px; height: 45px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 81px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 81px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 81px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 81px) rotate(0deg);
+#i500 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 215px; height: 45px;
+        -ms-transform: translate(-50%, -50%) translate(4px, 80px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(4px, 80px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(4px, 80px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(4px, 80px) rotate(0deg);
 }
 /*#/#*//*#i6.i494.image.css:image/base/css*/
 #i494 { opacity: 1; }
@@ -902,8 +893,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i484.font-local.css:font/font-local/css*/
-/*#i484.i485.font-local.css:font-local/css.1*/
+/*#/#*//*#i502.font-local.css:font/font-local/css*/
+/*#i502.i503.font-local.css:font-local/css.1*/
 @font-face {
 font-family: 'TradeGothicLTStd-Light';
 src: url('fonts/');
@@ -928,7 +919,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">Compra un PANTALÓN y obtén un 20% de descuento en toda tu compra.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/l9s9YfU.jpg"/>
+<img id="i130" src="https://i.imgur.com/TDmydx8.jpg"/>
 <!--#/#--><!--#i4.i456.image.html:image/html-->
 <img id="i456" src="https://i.imgur.com/GsmTVf2.png"/>
 <!--#/#--><!--#i4.i486.image.html:image/html-->
@@ -947,19 +938,16 @@ url('fonts/') format('svg');
 <div id="i5" class="panel-content-holder">
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i5.i354.text.html:text/html-->
-<div id="i354">Perú, ¡el país más rico 
-del mundo!</div>
 <!--#/#--><!--#i5.i496.image.html:image/html-->
-<img id="i496" src="https://i.imgur.com/6tm9GMm.jpg"/>
+<img id="i496" src="https://i.imgur.com/mRPBXAT.jpg"/>
 <!--#/#--><!--#i5.i414.image.html:image/html-->
-<img id="i414" src="https://i.imgur.com/zcgW2DL.jpg"/>
+<img id="i414" src="https://i.imgur.com/SFd70J8.jpg"/>
 <!--#/#--><!--#i5.i492.image.html:image/html-->
 <img id="i492" src="https://i.imgur.com/GsmTVf2.png"/>
-<!--#/#--><!--#i5.i488.image.html:image/html-->
-<img id="i488" src="https://i.imgur.com/PHMZOzz.png"/>
 <!--#/#--><!--#i5.i498.image.html:image/html-->
 <img id="i498" src="https://i.imgur.com/xJqyBh6.png"/>
+<!--#/#--><!--#i5.i488.image.html:image/html-->
+<img id="i488" src="https://i.imgur.com/PHMZOzz.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i460.image.html:image/html-->
@@ -975,7 +963,7 @@ del mundo!</div>
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/SFd70J8.jpg"/>
+<img id="i60" src="https://i.imgur.com/zcgW2DL.jpg"/>
 <!--#/#--><!--#i6.i500.text.html:text/html-->
 <div id="i500">Del 6 de agosto al 16 de septiembre de 2019.</div>
 <!--#/#--><!--#i6.i494.image.html:image/html-->
@@ -1005,7 +993,7 @@ del mundo!</div>
         <span>Swipe</span>
     </div>
 </div>
-<!--#/#--><!--#i484.font.html:font/html-->
+<!--#/#--><!--#i502.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i2.cube.js:cube/js.1*/
@@ -1046,7 +1034,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i288.i289.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://www.scappino.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.scappino.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1063,7 +1051,7 @@ var el = document.getElementById('i190');
 
 el.addEventListener('click', function(e){
     /*#i290.i291.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1080,7 +1068,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1097,7 +1085,7 @@ var el = document.getElementById('i242');
 
 el.addEventListener('click', function(e){
     /*#i294.i295.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1117,21 +1105,21 @@ if ('click' === 'click') {
 
 /*#/#*//*#i492.i493.positioning.js:positioning/base/js.2*/
 bmShow('i492');
-/*#/#*//*#i5.i488.image.js:image/base/js*/
-
-/*#/#*//*#i488.i489.positioning.js:positioning/base/js.2*/
-bmShow('i488');
 /*#/#*//*#i5.i498.image.js:image/base/js*/
 
 /*#/#*//*#i498.i499.positioning.js:positioning/base/js.2*/
 bmShow('i498');
+/*#/#*//*#i5.i488.image.js:image/base/js*/
+
+/*#/#*//*#i488.i489.positioning.js:positioning/base/js.2*/
+bmShow('i488');
 /*#/#*//*#i95.i312.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i312.i313.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1148,7 +1136,7 @@ var el = document.getElementById('i460');
 
 el.addEventListener('click', function(e){
     /*#i462.i463.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1165,7 +1153,7 @@ var el = document.getElementById('i468');
 
 el.addEventListener('click', function(e){
     /*#i470.i471.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1182,7 +1170,7 @@ var el = document.getElementById('i476');
 
 el.addEventListener('click', function(e){
     /*#i478.i479.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1210,7 +1198,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i336.i337.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://www.scappino.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.scappino.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1227,7 +1215,7 @@ var el = document.getElementById('i464');
 
 el.addEventListener('click', function(e){
     /*#i466.i467.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1244,7 +1232,7 @@ var el = document.getElementById('i472');
 
 el.addEventListener('click', function(e){
     /*#i474.i475.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1261,7 +1249,7 @@ var el = document.getElementById('i480');
 
 el.addEventListener('click', function(e){
     /*#i482.i483.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/bt8KTgP3SiFDXEd47'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/qsx9ne3BbapXgidk6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1344,10 +1332,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i354.text.meta:text/meta*/
-name: Texto; customName: 1;
-/*#/#*//*#i354.i355.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i496.image.meta:image/meta*/
 name: Imagen de Cuadro copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1363,15 +1347,15 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i492.i493.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i488.image.meta:image/meta*/
-name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i488.i489.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i498.image.meta:image/meta*/
 name: xJqyBh6.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i498.i499.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i488.image.meta:image/meta*/
+name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i488.i489.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
@@ -1438,6 +1422,6 @@ customName: 1;
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i484.font.meta:font/meta*/
+/*#/#*//*#i502.font.meta:font/meta*/
 name: Web Font: TradeGothicLTStd-Light; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
